[gd_scene load_steps=2 format=3 uid="uid://um667sagnx3a"]

[ext_resource type="Script" path="res://donotlook/gambler_bambler.gd" id="1_rhn5k"]

[node name="gambler_bambler" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rhn5k")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 632.0
offset_top = 91.0
offset_right = 1284.0
offset_bottom = 187.0
theme_override_font_sizes/font_size = 70
text = "Slot Machine Game"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 858.0
offset_top = 578.0
offset_right = 1012.0
offset_bottom = 682.0
theme_override_font_sizes/font_size = 70
text = "Spin"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -237.0
offset_right = 46.0
offset_bottom = -141.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "0"

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "0"

[node name="Label3" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "0"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 912.0
offset_top = 702.0
offset_right = 952.0
offset_bottom = 798.0
theme_override_font_sizes/font_size = 70
text = "0"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
